# catkin_ws

.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
devel/include/beginner_tutorial/: AddTwoIntsRequest.h
devel/include/quadruped_robot/: leg_state.h  motor_state.h  multi_leg_control.h  period.h  read_dxl.h  read_dxlRequest.h  read_dxlResponse.h  time_state.h  write_dxl.h  write_dxlRequest.h  write_dxlResponse.h
devel/include/robot_cuadrupedo/: 2d_vector.h  2vector.h  angle.h  motors_states.h  robot_state.h
devel/include/robot_cuadrupedo_msgs/: legs_control.h  motor_state.h  robot_velocity.h
devel/lib/beginner_tutorial/: add_two_ints_client  add_two_ints_server  add_two_ints_server.py  listener  listener.py  talker  talker.py
devel/lib/dynamixel_sdk/: packet_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py  robotis_def.py
devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
devel/lib/dynamixel_workbench_controllers/: dynamixel_workbench_controllers  find_dynamixel
devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
devel/lib/pkgconfig/: beginner_tutorial.pc  dynamixel_sdk.pc  dynamixel_sdk_examples.pc  dynamixel_workbench_controllers.pc  dynamixel_workbench_msgs.pc  dynamixel_workbench_operators.pc  dynamixel_workbench_toolbox.pc  prueba.pc  quadruped_robot.pc  robot_cuadrupedo.pc  robot_cuadrupedo_msgs.pc
devel/lib/prueba/: use_kbhit.py
devel/lib/quadruped_robot/: animation.py  gate_control.py  motor_scan_ax12.py  service_controller.py  trajectory.py
devel/lib/robot_cuadrupedo/: RC_lecture  change_id  control_caminata  control_dynamixel  gate_secuence.py  lector_de_receptor_RC  leg1_control  leg2_control  leg3_control  leg4_control  leg_control.py  leg_control2.py  patron_caminata
devel/share/beginner_tutorial/cmake/: beginner_tutorial-msg-extras.cmake  beginner_tutorial-msg-paths.cmake  beginner_tutorialConfig.cmake
devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
devel/share/prueba/cmake/: pruebaConfig.cmake
install/: _setup_util.py
install/lib/pkgconfig/: beginner_tutorial.pc
install/share/beginner_tutorial/: package.xml
src/beginner_tutorial/: CMakeLists.txt  package.xml
src/beginner_tutorial/launch/: turtlemimic.launch  turtlemimic.launch.save
src/beginner_tutorial/scripts/: add_two_ints_server.py
src/prueba/: CMakeLists.txt  setup.py
src/quadruped_robot/: CMakeLists.txt  package.xml  setup.py
src/quadruped_robot/launch/: quadruped_robot.launch
src/quadruped_robot/msg/: leg_state.msg  motor_state.msg  multi_leg_control.msg  period.msg  time_state.msg
src/quadruped_robot/scripts/: animation.py  gate_control.py  motor_scan.py  service_controller.py  velocity_control.py
src/quadruped_robot/srv/: read_dxl.srv  write_dxl.srv
src/robot_cuadrupedo/: CMakeLists.txt  package.xml
src/robot_cuadrupedo/launch/: quadruped_robot.launch
src/robot_cuadrupedo/lib/robot_cuadrupedo/: kbhit.py
src/robot_cuadrupedo/msg/: motors_states.msg  robot_state.msg
src/robot_cuadrupedo/scripts/: animation.py  gate_secuence.py  leg_control.py  leg_control2.py
src/robot_cuadrupedo/src/: RC_lecture.cpp  change_id.cpp  leg1_control.cpp  leg2_control.cpp  leg3_control.cpp  leg4_control.cpp
src/robot_cuadrupedo_msgs/: CMakeLists.txt
src/robot_cuadrupedo_msgs/msg/: legs_control.msg  motor_state.msg  robot_velocity.msg
(+127 files in other folders)
